# pytorch-templates

./: README.md  pyproject.toml
pytorch_templates/: template_dnn.py
